[package]
name = "websvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
config = { version = "0.13.3" }
fern = "0.6.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.152"

[dev-dependencies]
serial_test = "1.0.0"
