[package]
name = "websvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock"] }
config = { version = "0.13.3", default-features = false }
fern = { version = "0.6.2", features = ["colored"] }
log = { version = "0.4.19", features = ["std"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.171"

[dev-dependencies]
serial_test = "2.0.0"

[profile.release]
strip = true

[workspace]
members = ["healthcheck"]
